# RiskLens

./: .gitignore  README.md  pyproject.toml
docs/: analytical_findings.md  plan.md
src/: main.py  utils.py
src/discovery/: demo.py  engine.py
src/explain/: shap_analyzer.py  visualizer.py
src/risklens/: __init__.py
src/validation/: scoring.py
