[project]
name = "risklens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Priyansh", email = "priyanshkathayat@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "interpret>=0.7.8",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
